feat: Attachments image and video. working version